# PbF2Calo

./: .gitmodules  CMakeLists.txt  LICENSE  PbF2Calo.cc  README.md  artg4.json  example.json  run.mac  uw.json
ana/: CMakeLists.txt  cmp_eng_pht_positions.py  cmp_pht_angle.py  cmp_pht_positions.py  cmp_pht_ret_times.py  cmp_pht_times.py  dump_plots.py  eng_deposit.py  event_recon.cc
cmake/modules/: FindROOT.cmake
include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
src/: ActionInitialization.cc  ActionInitialization.h  AlPlateModel.cc  AlPlateModel.h  DetectorConstruction.cc  DetectorConstruction.h  EventAction.cc  EventAction.h  EventActionMessenger.cc  JsonUtility.h  OpticalPhysics.cc  PhotonTrackInformation.cc  PhotonTrackInformation.h  PhysicsList.cc  PhysicsList.h  PhysicsListArtG4.cc  PhysicsListArtG4.h  PhysicsListBase.cc  PhysicsListBase.h  PrimaryGeneratorAction.cc  RunAction.cc  RunAction.h  SiPlateModel.cc  SiPlateModel.h  StackingAction.cc  StackingAction.h  SteppingAction.cc  SteppingVerbose.cc  TrackAction.cc  TrackAction.h  TrackingAction.cc  TrackingAction.h
src/action/: PhotonTrackInformation.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.h  RunAction.cc  RunAction.h  SteppingAction.cc  SteppingAction.h  TrackAction.cc
src/geometry/: GeometryBase.cc  GeometryBase.h
src/geometry/calorimeter/: Calorimeter.cc  Calorimeter.h  Calorimeter.json
src/physics/: AlPlateModel.cc  AlPlateModel.h  OpticalPhysics.cc  OpticalPhysics.h  PbF2Model.cc  PbF2Model.h  PhysicsList.cc  PhysicsListBase.cc  PhysicsListBase.h
src/product/: ProductBase.cc  ProductBase.h
src/product/energy_deposit_histo/: EnergyDepositHisto.ccx  EnergyDepositHisto.hx  EnergyDepositHisto.json  EnergyDepositHistoSteppingAction.hx
src/product/energy_deposit_writer/: EnergyDepositData.h  EnergyDepositSteppingAction.cc  EnergyDepositWriter.cc  EnergyDepositWriter.h  EnergyDepositWriter.json
src/product/gdml_writer/: GdmlWriter.cc  GdmlWriter.h  GdmlWriter.json
src/product/muon_track_sniffer/: MuonTrackSniffer.cc  MuonTrackSniffer.h  MuonTrackSniffer.json  MuonTrackSnifferData.h  MuonTrackSnifferModel.cc  MuonTrackSnifferModel.h
src/product/photon_detector/: PhotonDetector.cc  PhotonDetector.h  PhotonDetector.json  PhotonDetectorData.h  SiPlateModel.cc  SiPlateModel.h
src/product/photon_origin_writer/: PhotonOriginData.h  PhotonOriginSteppingAction.cc  PhotonOriginSteppingAction.h  PhotonOriginWriter.cc  PhotonOriginWriter.h  PhotonOriginWriter.json
src/utility/: GeometryUtility.cc  GeometryUtility.h  JsonUtility.h  JsonUtility.icc
